Improvement/drop play db support (#65)